--- a/notebooks/gensim build.ipynb
+++ b/notebooks/gensim build.ipynb
@@ -174,6 +174,22 @@
    "source": [
     "vector"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"../models/doc2vec.model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
