--- a/notebooks/Sklearn LDA Build.ipynb
+++ b/notebooks/Sklearn LDA Build.ipynb
@@ -149,18 +149,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialise the count vectorizer with the English stop words\n",
-    "count_vectorizer = CountVectorizer(stop_words='english')\n",
-    "# Fit and transform the processed titles\n",
-    "count_data = count_vectorizer.fit_transform(df['clean_verse'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def print_topics(model, count_vectorizer, n_top_words):\n",
     "    words = count_vectorizer.get_feature_names()\n",
     "    for topic_idx, topic in enumerate(model.components_):\n",
@@ -171,22 +159,367 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Topics found via LDA:\n",
       "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "Topic #0:\n",
+      "shit fuck nigga bitch niggaz like im ass aint dont\n",
+      "\n",
+      "Topic #1:\n",
+      "time everybodi like got im break caus cha wild tick\n",
+      "\n",
+      "Topic #2:\n",
+      "love want dont wanna boom need like know gon tell\n",
+      "\n",
+      "Topic #3:\n",
+      "ay like rockin im tat bit ding birthdai yo money\n",
+      "\n",
+      "Topic #4:\n",
+      "la hill cypress hi lah che bum di ohh hater\n",
+      "\n",
+      "Topic #5:\n",
+      "doo check ju champion hut ch monster choo pink ou\n",
+      "\n",
+      "Topic #6:\n",
+      "ya come like stop dont gimm let got know im\n",
+      "\n",
+      "Topic #7:\n",
+      "like girl got im ass let dont dick bitch wanna\n",
+      "\n",
+      "Topic #8:\n",
+      "rock yo uhh like yall got hot bounc let cmon\n",
+      "\n",
+      "Topic #9:\n",
+      "bang hei whatcha wow mmm pow bow eu pra rain\n",
+      "\n",
+      "Topic #10:\n",
+      "know dont im oh let love babi girl like feel\n",
+      "\n",
+      "Topic #11:\n",
+      "dont im like fuck got nigga know shit bitch man\n",
+      "\n",
+      "Topic #12:\n",
+      "black ba like special drug swagger hand got og somebodi\n",
+      "\n",
+      "Topic #13:\n",
+      "yo like know man girl got im girls fly dont\n",
+      "\n",
+      "Topic #14:\n",
+      "da round eh dei club follow tear im blah girl\n",
+      "\n",
+      "Topic #15:\n",
+      "believ comin im zoom js dont dom africa presid nubian\n",
+      "\n",
+      "Topic #16:\n",
+      "god like life black live world im mind man time\n",
+      "\n",
+      "Topic #17:\n",
+      "got cop man like dope monei said time block know\n",
+      "\n",
+      "Topic #18:\n",
+      "im aint like love got caus dont know time man\n",
+      "\n",
+      "Topic #19:\n",
+      "na le la pa dan et je cest que tu\n",
+      "\n",
+      "Topic #20:\n",
+      "like im got shit kid rap come head run dont\n",
+      "\n",
+      "Topic #21:\n",
+      "im smoke high weed roll like got fuck pass drink\n",
+      "\n",
+      "Topic #22:\n",
+      "man im know aint dont like got shit ghetto motherfuck\n",
+      "\n",
+      "Topic #23:\n",
+      "ah wait gone right power hah hand ayi drip like\n",
+      "\n",
+      "Topic #24:\n",
+      "yeah uh huh like im got know monei dont aint\n",
+      "\n",
+      "Topic #25:\n",
+      "mi dem di yuh fi nuh nah like man inna\n",
+      "\n",
+      "Topic #26:\n",
+      "ho walk bye woah dog like east jeff fresh im\n",
+      "\n",
+      "Topic #27:\n",
+      "im bitch like got fuck nigga aint monei shit dont\n",
+      "\n",
+      "Topic #28:\n",
+      "im got like white jack stop game black shit mamma\n",
+      "\n",
+      "Topic #29:\n",
+      "im dont aint know life got caus time like gotta\n",
+      "\n",
+      "Topic #30:\n",
+      "like im yall shit aint rap got dont rapper spit\n",
+      "\n",
+      "Topic #31:\n",
+      "im dont try fuck got thei think thi look like\n",
+      "\n",
+      "Topic #32:\n",
+      "nigga got im fuck aint shit dont real bitch know\n",
+      "\n",
+      "Topic #33:\n",
+      "low like im free got brooklyn world boogi dirti mo\n",
+      "\n",
+      "Topic #34:\n",
+      "new york citi brand album song artist com type time\n",
+      "\n",
+      "Topic #35:\n",
+      "em whoa im hop hip hit star tell like thei\n",
+      "\n",
+      "Topic #36:\n",
+      "ha gangsta im like dogg west got bitch coast hoe\n",
+      "\n",
+      "Topic #37:\n",
+      "ich die du und der mein ja ist wie da\n",
+      "\n",
+      "Topic #38:\n",
+      "good ooh bad im like got big man know goe\n",
+      "\n",
+      "Topic #39:\n",
+      "crazi runnin pop bitch crazy movin fuck im like troubl\n",
+      "\n",
+      "Topic #40:\n",
+      "niggaz know got im come block aint like hood yall\n",
+      "\n",
+      "Topic #41:\n",
+      "im like dai awai dream iv time gonna feel night\n",
+      "\n",
+      "Topic #42:\n",
+      "like im rhyme caus mic mc rock beat come got\n",
+      "\n",
+      "Topic #43:\n",
+      "im oh ill like got know lord win paper dumb\n",
+      "\n",
+      "Topic #44:\n",
+      "fuckin fuck im shit bitch like dont mother ill got\n",
+      "\n",
+      "Topic #45:\n",
+      "que lo el te la tu en mi yo se\n",
+      "\n",
+      "Topic #46:\n",
+      "wit ya tha dat ta like fuck bitch fuckin blow\n",
+      "\n",
+      "Topic #47:\n",
+      "nigga niggaz im shit ya like got fuck gun em\n",
+      "\n",
+      "Topic #48:\n",
+      "im got boi know like ride aint big caus game\n",
+      "\n",
+      "Topic #49:\n",
+      "hey im oooh like wish face wake fuck aint know\n"
      ]
     }
    ],
    "source": [
+    "# Initialise the count vectorizer with the English stop words\n",
+    "stemmed_count_vectorizer = CountVectorizer(stop_words='english')\n",
+    "# Fit and transform the processed titles\n",
+    "stemmed_count_data = stemmed_count_vectorizer.fit_transform(df['clean_verse'])\n",
+    "\n",
     "# Tweak the two parameters below\n",
-    "number_topics = 5\n",
+    "number_topics = 50\n",
+    "number_words = 10\n",
+    "# Create and fit the LDA model\n",
+    "stemmed_lda = LDA(n_components=number_topics, n_jobs=-1)\n",
+    "stemmed_lda.fit(stemmed_count_data)\n",
+    "# Print the topics found by the LDA model\n",
+    "print(\"Topics found via LDA:\")\n",
+    "print_topics(stemmed_lda, stemmed_count_vectorizer, number_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import _pickle as cPickle\n",
+    "# save the classifier\n",
+    "with open('../models/lda/stemmed_lda.pkl', 'wb') as f:\n",
+    "    cPickle.dump(stemmed_lda, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topics found via LDA:\n",
+      "\n",
+      "Topic #0:\n",
+      "ya wit like cuz im got coast ill west aint\n",
+      "\n",
+      "Topic #1:\n",
+      "high smoke weed woo smokin twerk na roll regular fly\n",
+      "\n",
+      "Topic #2:\n",
+      "im nigga bitch got like fuck niggas yeah aint know\n",
+      "\n",
+      "Topic #3:\n",
+      "got just summer like im alright drink juice pour know\n",
+      "\n",
+      "Topic #4:\n",
+      "new york city brand freak town like way im brooklyn\n",
+      "\n",
+      "Topic #5:\n",
+      "life im just time dont know cause people god world\n",
+      "\n",
+      "Topic #6:\n",
+      "niggas im rock like yo yall shit yeah know got\n",
+      "\n",
+      "Topic #7:\n",
+      "ay ik trap je en een er che igh op\n",
+      "\n",
+      "Topic #8:\n",
+      "im aint got niggas dont know nigga shit just like\n",
+      "\n",
+      "Topic #9:\n",
+      "nigga im niggas fuck shit bitch dont aint like ass\n",
+      "\n",
+      "Topic #10:\n",
+      "like im oh cause mic dont got yo beat rock\n",
+      "\n",
+      "Topic #11:\n",
+      "bounce dat low im make hit know like wha got\n",
+      "\n",
+      "Topic #12:\n",
+      "nah ohh niggas ta like war riding im oh yeah\n",
+      "\n",
+      "Topic #13:\n",
+      "know yeah im like got uh aint dont just right\n",
+      "\n",
+      "Topic #14:\n",
+      "im aint yall dont shit like got niggaz nigga wit\n",
+      "\n",
+      "Topic #15:\n",
+      "im gang like wolf future fuckin niggaz burn odd fuck\n",
+      "\n",
+      "Topic #16:\n",
+      "want walk bye man time city dont im like welcome\n",
+      "\n",
+      "Topic #17:\n",
+      "da work like ba wait im dum dream got just\n",
+      "\n",
+      "Topic #18:\n",
+      "le les pas des je dans et cest que tu\n",
+      "\n",
+      "Topic #19:\n",
+      "que la el te tu yo lo en mi se\n",
+      "\n",
+      "Topic #20:\n",
+      "im hood ghetto got like yeah know em young aint\n",
+      "\n",
+      "Topic #21:\n",
+      "like shit yo fuck im rap dont yall nigga niggaz\n",
+      "\n",
+      "Topic #22:\n",
+      "na like im aint check cause funk ready yo got\n",
+      "\n",
+      "Topic #23:\n",
+      "black turn white runnin yea rockin imma wassup like birthday\n",
+      "\n",
+      "Topic #24:\n",
+      "tat soul movin im north memphis lisa cause food south\n",
+      "\n",
+      "Topic #25:\n",
+      "murder kill gt nigga soldiers soldier geah im limit die\n",
+      "\n",
+      "Topic #26:\n",
+      "love im dont know just baby like girl yeah oh\n",
+      "\n",
+      "Topic #27:\n",
+      "man yo like got im yeah youre black doo know\n",
+      "\n",
+      "Topic #28:\n",
+      "like im lets dont talk bitch body shit got fuck\n",
+      "\n",
+      "Topic #29:\n",
+      "yo got shit ass bitch pussy like nigga dick fuck\n",
+      "\n",
+      "Topic #30:\n",
+      "niggaz nigga like got shit yall yo dont im block\n",
+      "\n",
+      "Topic #31:\n",
+      "like im mind black war time make words earth brain\n",
+      "\n",
+      "Topic #32:\n",
+      "like ha got im hoes girl ass bitch big dick\n",
+      "\n",
+      "Topic #33:\n",
+      "good stop boom bring jump drop drip pump like ye\n",
+      "\n",
+      "Topic #34:\n",
+      "wanna ride shake bad im slow like roll fast rollin\n",
+      "\n",
+      "Topic #35:\n",
+      "like im got em cause dont man just ill aint\n",
+      "\n",
+      "Topic #36:\n",
+      "party like dance hands girls got im ladies just club\n",
+      "\n",
+      "Topic #37:\n",
+      "em love aye eh make rain dey yes im boys\n",
+      "\n",
+      "Topic #38:\n",
+      "ich die und du der das ist wie den auf\n",
+      "\n",
+      "Topic #39:\n",
+      "come got like time mother yeah thats dont cha set\n",
+      "\n",
+      "Topic #40:\n",
+      "im fuck shit dont like bitch fuckin fucking cause just\n",
+      "\n",
+      "Topic #41:\n",
+      "just like im dont got said thats did really hes\n",
+      "\n",
+      "Topic #42:\n",
+      "mi dem di yuh ah fi nuh like man inna\n",
+      "\n",
+      "Topic #43:\n",
+      "mama day mary like got wave free bud california im\n",
+      "\n",
+      "Topic #44:\n",
+      "like nigga got just im em niggas aint time shit\n",
+      "\n",
+      "Topic #45:\n",
+      "money got im aint like gettin make just paper man\n",
+      "\n",
+      "Topic #46:\n",
+      "bridge speakers riot like blast bandz lovin got puppet givin\n",
+      "\n",
+      "Topic #47:\n",
+      "la law break curse tony car cups montana peek oh\n",
+      "\n",
+      "Topic #48:\n",
+      "like live im tick got yup dont swang tock yo\n",
+      "\n",
+      "Topic #49:\n",
+      "let dont dead rock try tape win got man em\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialise the count vectorizer with the English stop words\n",
+    "count_vectorizer = CountVectorizer(stop_words='english')\n",
+    "# Fit and transform the processed titles\n",
+    "count_data = count_vectorizer.fit_transform(df['verse'])\n",
+    "\n",
+    "# Tweak the two parameters below\n",
+    "number_topics = 50\n",
     "number_words = 10\n",
     "# Create and fit the LDA model\n",
     "lda = LDA(n_components=number_topics, n_jobs=-1)\n",
@@ -198,10 +531,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the classifier\n",
+    "with open('../models/lda/lda.pkl', 'wb') as f:\n",
+    "    cPickle.dump(lda, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('../models/lda/lda.pkl', 'rb') as f:\n",
+    "    gnb_loaded = cPickle.load(fid)"
+   ]
   }
  ],
  "metadata": {
